themistokles/ge/overlays/hellas/agora/elastic/ir.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: kibana-ui
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`kibana.hellas.odysseia-greek`)
      kind: Rule
      services:
        - name: kibana-kb-http
          port: 5601
          scheme: https
          serversTransport: insecure-backend
  tls: {}
